--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "underscore": "^1.7.0"
   },
   "devDependencies": {
-    "tape": "~2.3.2",
-    "longjohn": "~0.2.2"
+    "istanbul": "^0.3.2",
+    "longjohn": "~0.2.2",
+    "tape": "~2.3.2"
   },
   "scripts": {
-    "test": "rm tests/fish 2>/dev/null; node tests/test.js && (cd tests ; node test.js)"
+    "test": "rm tests/fish 2>/dev/null; node tests/test.js && (cd tests ; node test.js)",
+    "coverage": "./node_modules/.bin/istanbul cover tests/test.js 2>/dev/null"
   },
   "repository": "git@github.com:robert-chiniquy/depends-on.git",
   "author": "Robert Chiniquy",
