--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "async": "~0.2.10",
-    "async-autotarget": "~0.0.1",
+    "async-autotarget": "0.0.2",
     "resolve": "^1.0.0",
     "underscore": "^1.7.0"
   },
