This fixes #5. The dependencies.json file can be located adjacent to the script using it. Also exports the Dependencies object as a property of the ready() function, just in case that's useful for debugging.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "tape": "~2.3.2"
   },
   "scripts": {
-    "test": "rm tests/fish 2>/dev/null; node tests/test.js && (cd tests ; node test.js)",
+    "test": "rm tests/fish 2>/dev/null; node tests/test.js && (cd tests ; node test.js) && node tests/local/local-dir-test.js",
     "coverage": "./node_modules/.bin/istanbul cover tests/test.js 2>/dev/null"
   },
   "repository": "git@github.com:robert-chiniquy/depends-on.git",
